cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_83.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/des/ofb_enc.c:47: error: DEAD_STORE
  The value written to &iv (type unsigned char*) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/des/ofb_enc.c:47:5: Write of unused value
45.       iv = &(*ivec)[0];
46.       c2l(iv, v0);
47.       c2l(iv, v1);
          ^
48.       ti[0] = v0;
49.       ti[1] = v1;
